# cerebro

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CLAUDE_DISTILLED.md  CLAUDE_REFERENCE.md  MODEL_AUTOPSY_COMPLETE.md  NEXT_STEPS.md  PATH3_INFRASTRUCTURE.md  PERFORMANCE_SWEEP_GUIDE.md  PHASE1_COMPLETE.md  PIPELINES_VERIFIED.md  PRETRAIN_FINETUNE_GUIDE.md  R5_PROTECTION_SUMMARY.md  README.md  REFACTORING_PROGRESS.md  debug_electrodes.py  final_sprint.md  gpt_roadmap.md  knowledge_base.md  pyproject.toml  raw_data.py  reconstruct_metadata.py  run_all_mini_pipeline.sh  run_all_verification_tests.sh  run_path3_jepa_smoke.sh  run_smoke_test_pipeline.sh  test_16s_encoder.py  test_autopsy.py  test_cache_manager.py  test_captum.py  test_learned_channels.py  test_mamba_c1.py  test_mamba_fixes.py  test_mamba_quick.py  test_masked_pretraining.py  test_memmap.py  test_neuraloperator.py  test_r5_evaluation.py  test_tuh_zarr.py  (+3 more)
configs/: README.md  challenge1_base.yaml  challenge1_eegnex.yaml  challenge1_eegnex_mini.yaml  challenge1_eegnex_r5test.yaml  challenge1_jepa.yaml  challenge1_jepa_mini.yaml  challenge1_mini.yaml  challenge1_r5test.yaml  challenge1_submission.yaml  codebook.yaml  config.yaml  contrastive_eegnex_movies.yaml  contrastive_eegnex_movies_mini.yaml  jepa_c1_mini.yaml  jepa_c1_smoke.yaml  jepa_c2_mini.yaml  jepa_c2_smoke.yaml  jepa_finetune_challenge1_full.yaml  jepa_finetune_challenge2_full.yaml  jepa_phase1_pretrain.yaml  jepa_phase1_pretrain_full.yaml  jepa_phase1_pretrain_mini.yaml  jepa_phase2_contrastive_smoke.yaml  jepa_phase3_challenge1_smoke.yaml  jepa_phase3_challenge2_smoke.yaml  jepa_pretrain_mini.yaml  jepa_pretrain_smoke.yaml  signaljepa_masked_pretrain_smoke.yaml  signaljepa_pretrain_mini_vanilla.yaml  supervised_eegnex_challenge1.yaml  (+13 more)
docs/: tuh_to_hbn.json  (+15 more)
(+293 files in other folders)
