[project]
name = "cerebro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Varun Shijo", email = "varunshi@buffalo.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "braindecode>=1.2.0",
    "eegdash>=0.3.8",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "isort>=6.0.1",
    "jupyterlab>=4.4.7",
    "natsort>=8.4.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
