[project]
name = "cerebro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Varun Shijo", email = "varunshi@buffalo.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "black[jupyter]>=25.1.0",
    "braindecode>=1.2.0",
    "eegdash>=0.3.8",
    "ipykernel>=6.30.1",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "isort>=6.0.1",
    "jupyterlab>=4.4.7",
    "natsort>=8.4.0",
    "nbconvert>=7.16.6",
    "pyqt6>=6.9.1",
    "rich>=13.9.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.4",
    "pytest>=8.3.3",
    "hydra-core>=1.3.2",
    "lightning[pytorch-extra]>=2.5.5",
    "captum>=0.8.0",
    "seaborn>=0.13.2",
]

[project.scripts]
cerebro = "cerebro.cli.train:cli_main"
cerebro-build-submission = "cerebro.cli.build_submission:build_submission_cli"
cerebro-score = "cerebro.cli.score:score_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cerebro"]
